@@ -106,7 +106,7 @@ After execution of an expression, the whole expression will be marked. This norm
 The <keycap>Page Up</keycap> and <keycap>Page Down</keycap> keys will access previously entered expressions. With focus in the expression entry, <keycap>Page Up</keycap> traverses backwards in the expression history and <keycap>Page Down</keycap> forward. The <keycap>Up</keycap> and <keycap>Down</keycap> can also be used for the same purpose when the completion list is not shown.
 </para>
 <para>
-Although the expression entry can display multiple lines of text the up and down errors on the keyboard can not be used for navigation inside the field and the <keycap>Enter</keycap> does not insert a line feed. New lines are automatically created when needed.
+Although the expression entry can display multiple lines of text, the <keycap>Enter</keycap> does not insert a line feed. New lines are automatically created when needed.
 </para>
 <para>
 The font used for the expression entry can be selected in the preferences dialog (<menuchoice><guimenu>Edit</guimenu><guimenuitem>Preferences</guimenuitem></menuchoice>).
