@@ -1,6 +1,7 @@
 2017-09-20 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Fix Home and End keys in expression entry
+	* Use Up key if not on first line and Down key if not on last line for movement within expression entry
 
 2017-09-15 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
